# MyClaw

./: .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md  README.zh-CN.md
.claude/: launch.json  settings.local.json
.github/workflows/: desktop-public-release.yml
.omx/: metrics.json
.omx/logs/: tmux-hook-2026-04-05.jsonl  tmux-hook-2026-04-06.jsonl  turns-2026-04-05.jsonl  turns-2026-04-06.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: desktop-comprehensive-bugs.md  desktop-login-failure.md  desktop-personal-prompt-layout-overlap.md  desktop-post-login-unresponsive.md  (+12 more)
cloud/: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
desktop/: .codex-tmp-workflow-canvas-readback.txt  .gitignore  AGENTS.md  BUGFIX-TRACKER.md  README.md  README.startup.md  TODO.md  build_log.txt  css-fix-lines.js  css-fix2.js  css-replace.js  eslint.config.mjs  fix-chat-page.js  fix-workflows.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replace.js  super-fix-chat.js  tsconfig.base.json  tsconfig.json  tsconfig.renderer.json  vite.config.ts  vitest.config.ts
desktop/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/apps/desktop/src-tauri/src/: main.rs  runtime_supervisor.rs
docs/: 模型网关迁移说明.md
newApp/: TODO.md  package-lock.json  package.json  tsconfig.main.json
(+1088 files in other folders)
