[package]
name = "myclaw_desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "MyClaw_desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }

[features]
default = []
